# caffeine-tracker

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  vercel.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  wait-for-it.sh
backend/ai/: gemini_helper.py  models.py  urls.py  views.py
backend/ai/migrations/: 0001_initial.py
backend/caffeine/: models.py  serializers.py  urls.py  views.py
backend/caffeine/migrations/: 0001_initial.py  0002_rename_caffeine_amount_mg_caffeinelog_caffeine.py  0003_rename_caffeine_caffeinelog_caffeine_mg.py  0004_rename_beverage_size_ml_caffeinelog_added_sugars_g_and_more.py
backend/core/: settings.py  urls.py
backend/energy/: models.py  serializers.py  urls.py  views.py
backend/energy/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_caffeine_sensitivity.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/src/: App.tsx  global.css  main.tsx
frontend/src/components/: app-sidebar.tsx  login-form.tsx
frontend/src/components/charts/: caffeine-chart.tsx  caffeine-over-time.tsx
frontend/src/components/chatbot/: chat-bot.tsx
frontend/src/components/forms/: intake.tsx
frontend/src/components/log/: caffeine-log.tsx
frontend/src/components/login/: login-form.tsx  page.tsx
frontend/src/dashboard/: page.tsx  quick-selector-card.tsx
frontend/src/types/: auth.ts  data-fetching.ts
(+3 files in other folders)
